objects/PRMBoxFolder__c.object
<CustomObject>
    <fields>
        <fullName>Box_File_Folder_Name_BG__c</fullName>
        <label>Box File / Folder Name - BG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_CS__c</fullName>
        <label>Box File / Folder Name - CS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_DA__c</fullName>
        <label>Box File / Folder Name - DA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_DE__c</fullName>
        <label>Box File / Folder Name - DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_EL__c</fullName>
        <label>Box File / Folder Name - EL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_EN__c</fullName>
        <label>Box File / Folder Name - EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_ES__c</fullName>
        <label>Box File / Folder Name - ES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_FI__c</fullName>
        <label>Box File / Folder Name - FI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_FR__c</fullName>
        <label>Box File / Folder Name - FR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_HR__c</fullName>
        <label>Box File / Folder Name - HR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_HU__c</fullName>
        <label>Box File / Folder Name - HU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_IN__c</fullName>
        <label>Box File / Folder Name - IN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_IT__c</fullName>
        <label>Box File / Folder Name - IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_JA__c</fullName>
        <label>Box File / Folder Name - JA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_KO__c</fullName>
        <label>Box File / Folder Name - KO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_NL__c</fullName>
        <label>Box File / Folder Name - NL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_NO__c</fullName>
        <label>Box File / Folder Name - NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_PL__c</fullName>
        <label>Box File / Folder Name - PL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_PT__c</fullName>
        <label>Box File / Folder Name - PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_RO__c</fullName>
        <label>Box File / Folder Name - RO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_RU__c</fullName>
        <label>Box File / Folder Name - RU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_SV__c</fullName>
        <label>Box File / Folder Name - SV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_TH__c</fullName>
        <label>Box File / Folder Name - TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_TR__c</fullName>
        <label>Box File / Folder Name - TR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_VI__c</fullName>
        <label>Box File / Folder Name - VI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_File_Folder_Name_ZH__c</fullName>
        <label>Box File / Folder Name - ZH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <label>Box File / Folder Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FolderName__c</fullName>
        <label>Box File / Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOX_FOLDER</fullName>
                    <label>Folder</label>
                </value>
                <value>
                    <fullName>BOX_FILE</fullName>
                    <label>File</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PRM Box Folder</label>
    <listViews>
        <fullName>All_Files</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>FolderId__c</columns>
        <columns>FolderName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Box_File_Folder_Name_FR__c</columns>
        <columns>Box_File_Folder_Name_ES__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Files</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_License_documents_folders</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>FolderId__c</columns>
        <columns>FolderName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Box_File_Folder_Name_FR__c</columns>
        <columns>Box_File_Folder_Name_ES__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FolderName__c</field>
            <operation>contains</operation>
            <value>License</value>
        </filters>
        <label>My License (LV&amp;MV programs) folders</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>PRM Box Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Box Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>